--- a/app/views/pages/trademark_application.html.erb
+++ b/app/views/pages/trademark_application.html.erb
@@ -73,7 +73,7 @@
 	</p>
 <% else %>
   <% form_for('trademarks', :html => {:class => "validate"}) do |f| %>
-  <div id="column_first">
+  <div id="column_first" class="less">
     <p class="first">
   		<%= f.label(:name, "<strong>1.</strong> Name of the Owner of the Trademark") %>
   		<%= f.text_field :name, :class => "required" %>
@@ -88,6 +88,7 @@
   		<%= f.label(:type_of_entity, "Type of entity (if applicable)") %>
   		<%= f.text_field :type_of_entity %>
   	</p>
+  	<%= link_to image_tag("bt/help.jpg", :alt => "Help", :class => "help_icon", :id => "help_icon7"), page_path("inventor-resource"), :target => "_blank" %>
   		<p class="first address">
     		<%= f.label(:address, "<strong>2.</strong> Street Address of Owner:") %>
     		<%= f.text_field :address, :class => "required" %>
@@ -125,12 +126,14 @@
   		<%= f.label(:phrase, "<strong>9.</strong> Enter the exact word or phrase of the trademark you wish to register:") %>
   		<%= f.text_field :phrase, :class => "required" %>
   	</p>
+  	<%= link_to image_tag("bt/help.jpg", :alt => "Help", :class => "help_icon", :id => "help_icon8"), page_path("inventor-resource"), :target => "_blank" %>
   	<p class="textarea">
   		<%= f.label(:description, "<strong>10.</strong> Describe the goods and/or services you will use your trademark with:") %>
   		<%= f.text_area :description, :class => "required" %>
   		<small>e.g. t-shirts, medical software, online social networking website, real estate agent business.</small>
   	</p>
-  	<p class="checkbox radio">
+  	<%= link_to image_tag("bt/help.jpg", :alt => "Help", :class => "help_icon", :id => "help_icon9"), page_path("inventor-resource"), :target => "_blank" %>
+  	<p class="checkbox radio indent">
   		<%= f.label(:being_used, "<strong>11.</strong> Is this trademark currently being used?") %>
   		<small>Use means interstate commerce in the United States. The name of the trademark entered in #8 must be used in connection with the goods and/or services you described in #9.</small>       
   		<%= f.radio_button :being_used, "yes" %>
@@ -138,11 +141,13 @@
   		<%= f.radio_button :being_used, "no" %>
   		<%= f.label(:being_used_no, "No", :class => "small") %>
   	</p>
+  	<%= link_to image_tag("bt/help.jpg", :alt => "Help", :class => "help_icon", :id => "help_icon10"), page_path("inventor-resource"), :target => "_blank" %>
   	<p class="big_label">
   		<%= f.label(:first_date, "<strong>12.</strong> If this trademark is currently being used, when was the first date of your use of the trademark?") %>
   		<%= f.text_field :first_date, :class => "required" %>
   		<small>This date must be used in interstate commerce in the United States as used in connection with the goods and/or services you described in #9.</small>
   	</p>
+  	<%= link_to image_tag("bt/help.jpg", :alt => "Help", :class => "help_icon", :id => "help_icon11"), page_path("inventor-resource"), :target => "_blank" %>
   	<p class="textarea terms">
   		<%= f.text_area :terms, :value => "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.", :disabled => true %>
   	</p>
