--- a/app/views/pages/trademarks.html.erb
+++ b/app/views/pages/trademarks.html.erb
@@ -4,5 +4,5 @@
 </div>
 <div id="hot_links">
   <%= link_to image_tag("bt/trademark_search.png", :class => "first", :alt => "Trademark Search", :title => "Trademark Search", :size => "344x238"), page_path("trademark-search") %>
-  <%= link_to image_tag("bt/trademark_application.png", :alt => "Trademark Application", :title => "Trademark Application", :size => "397x238"), page_path("trademark-registration") %>
+  <%= link_to image_tag("bt/trademark_application.png", :alt => "Trademark Application", :title => "Trademark Application", :size => "397x238"), page_path("trademark-application") %>
 </div>
