--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -3,6 +3,10 @@
   <%= f.text_field :name %>
 </p>
 <p>
+  <%= f.label :summary %>
+  <%= f.text_area :summary %>
+</p>
+<p>
   <%= f.label :body %>
   <%= fckeditor_textarea "page", "body", :height => "400px" %>
 </p>
