--- a/app/views/pages/patent_search.html.erb
+++ b/app/views/pages/patent_search.html.erb
@@ -118,7 +118,7 @@
   	</p>
   	<p>
   		<%= f.label(:state, "<strong>12.</strong> State:") %>
-  		<%= f.text_field :state, :class => "required" %>
+  		<%= f.us_state_select :state, {:show => :full}, {:prompt => 'Select a State', :class => 'required'} %>
   	</p>
   	<p>
   		<%= f.label(:zip_code, "<strong>13.</strong> ZIP Code:") %>
