--- a/app/views/mailer/forgot_password.html.erb
+++ b/app/views/mailer/forgot_password.html.erb
@@ -1,3 +1,3 @@
-<h1>Password Request <%= SITE_DOMAIN %></h1>
+<h1>Information Request <%= SITE_DOMAIN %></h1>
 <p>&nbsp;</p>
-<p><%= @params[:name] %>, your new password is "<%= @password %>" please login <%= link_to "here", "#{SITE_URL}login"  %>.</p>
+<p><%= @params[:name] %>, your new password is "<%= @password %>", use this new password with "<%= @params[:login] %>" username. Please login <%= link_to "here", "#{SITE_URL}login"  %>.</p>
