some improvements of forms, building new questionaire

--- a/app/views/admin/configurations/_form.html.erb
+++ b/app/views/admin/configurations/_form.html.erb
@@ -1,5 +1,21 @@
 <p>
-  <%= f.label :service_price, "Patent Service Price" %>
+  <%= f.label :service_price, "Provisional Patent Questionnaire Price" %>
+  <%= f.text_field :service_price %>
+</p>
+<p>
+  <%= f.label :service_price, "Patent Search Price" %>
+  <%= f.text_field :service_price %>
+</p>
+<p>
+  <%= f.label :service_price, "Combo Price - Provisional Patent Questionnaire + Patent Search" %>
+  <%= f.text_field :service_price %>
+</p>
+<p>
+  <%= f.label :service_price, "Trademark Application Price" %>
+  <%= f.text_field :service_price %>
+</p>
+<p>
+  <%= f.label :service_price, "Trademark Search Price" %>
   <%= f.text_field :service_price %>
 </p>
 <p>
