--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>My Account</h1>
-<% form_for(@user, :url => user_path, :html => { :class => "validate", :method => :put }) do |f| %>
+<% form_for(@user, :url => user_path, :html => { :id => "my_account", :class => "validate", :method => :put }) do |f| %>
   	<p>
   		<%= f.label :password, "Password:" %>
   		<%= f.password_field :password, :class => "{" + ((params[:action] == "edit") ? "" : "required:true, ") + "minlength:6}" %>
@@ -12,6 +12,6 @@
 	  <%= f.check_box :newsletter %>
 	  <%= f.label :newsletter, "I would like to receive the PatentLock newsletter.<br/>Sent no more than once per month." %>
 	</p>
-  <%= submit_tag(t(:update)) %>
+  <%= submit_tag(t(:update), :class => "replacement submit") %>
 <% end %>
 <%= javascript "plugins/metadata", "plugins/validate" %>
