--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -36,7 +36,7 @@
   </li>
   <li>
     <a href="#" class="title blog"></a>
-    <h3><%= link_to @blog.name, "#", :target => "_blank" %></h3>
+    <h3><%= link_to @blog.name, "#" %></h3>
     <p><%= @blog.summary.summary 150 rescue "" %></p>
   </li>
 </ul>
